# eeg-mae-thesis

./: .gitignore  LICENSE  README.md  autoresearch-dashboard.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  pyproject.toml
configs/: exp2_head_depth.yaml  exp3_epoch_sweep.yaml  exp4_enc_dim.yaml  exp5_finetune.yaml  exp6_pooling.yaml  exp7_latent.yaml  push_mae_mean.yaml
docs/: brainbert_phase4_plan.md
docs/adr/: 0001-spectrogram-mae-architecture.md  0002-resumable-checkpointing.md  0003-soft-label-kl-objective.md
experiments/: worklog.md
notebooks/: 00_quickstart.ipynb
results/: .gitkeep  ensemble.csv  ensemble_tta.csv  ensemble_votes.csv  exp2_head_depth.csv  exp3_epoch_sweep.csv  exp4_enc_dim.csv  exp5_finetune.csv  exp6_pooling.csv  exp7_latent.csv  kl_progression.csv  push_mae_mean.csv  twostage.csv
scripts/: run_autoresearch.sh  run_fulldata.sh  run_phase2.sh  run_phase2b.sh  run_push.sh  run_squeeze.sh  run_twostage.sh  run_twostage_cnn.sh
src/eeg_mae/: __init__.py  augment.py  cache.py  cnn.py  constants.py  cv.py  data.py  device.py  ensemble.py  heads.py  latent.py  losses.py  metrics.py  models.py  paths.py  trainer.py  tta.py  twostage.py  viz.py
src/eeg_mae/cli/: __init__.py  best_kl_push.py  build_cache.py  ensemble_votes.py  make_figures.py  pretrain_mae.py  run_experiment.py  tta_push.py  twostage_push.py
tests/: test_data.py  test_metrics.py  test_models_heads.py  test_patchify.py  test_resume_equivalence.py
