[project]
name = "eeg_mae"
version = "0.1.0"
description = "Self-supervised spectrogram Masked Autoencoder for harmful brain activity classification (HMS / EEG)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Niels Pacheco Barrios" }]
keywords = ["eeg", "masked-autoencoder", "self-supervised", "seizure", "epileptiform", "kl-divergence"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavier extras only needed for specific studies / dev.
viz = ["umap-learn>=0.5"]            # experiment 7 (latent map)
cnn = ["timm>=0.9"]                  # EfficientNet baseline in the ensemble push
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
eeg-mae-build-cache = "eeg_mae.cli.build_cache:main"
eeg-mae-pretrain = "eeg_mae.cli.pretrain_mae:main"
eeg-mae-experiment = "eeg_mae.cli.run_experiment:main"
eeg-mae-figures = "eeg_mae.cli.make_figures:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eeg_mae"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled case-by-case; long figure code is readable

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests that train models on real data (deselect with '-m \"not slow\"')",
]
